# smart_home_tinkoff

./: .gitmodules  README.md  hub.py  pyproject.toml  smarthome  test.txt  utils.py
smarthub/: __main__.py  cli.py  device.py  enums.py  hub.py  parser.py  payload.py  uleb128.py  utils.py
smarthub/package/: decoder.py  encoder.py  package.py
smarthub/packet/: decoder.py  packet.py
tests/: clock_comand.py  envsensor_comand.py  lamp_comand.py  socket_comand.py  switch_comand.py  test_clock_comand.py  test_decoder.py  test_envsensor_comand.py  test_json.json  test_lamp_comand.py  test_socket_comand.py  test_switch_comand.py
